--- a/Front_End/Turma44/assets/css/style.css
+++ b/Front_End/Turma44/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-image: radial-gradient(rgb(240, 240, 48), rgb(188, 117, 209));
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Courier New;
     text-align: justify;
   }
 
