--- a/Fund_Web/Turma44/assets/css/style.css
+++ b/Fund_Web/Turma44/assets/css/style.css
@@ -19,15 +19,6 @@ nav {
     font-weight: bolder;
  }
 
- img{
-    float: left;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    border-radius: 50px;
-    position: static;
-}
-
 footer{
     background-color: rgb(255, 255, 255, 0.295);
     text-align: center;
@@ -36,6 +27,66 @@ footer{
     position: static;
     border-radius: 30px;
 }
+
+
+img{
+  width: 220px;
+  height: 200px;
+  border-radius: 50px;
+  display: flex;
+  
+}
+
+.box {
+  background-color: transparent;
+  width: 220px;
+  height: 200px;
+  border: 1px solid #f1f1f100;
+  perspective: 1000px;  
+}
+
+.container{
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+
+}
+
+.inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.box:hover .inner {
+  transform: rotateY(180deg);
+}
+
+.front, .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.front {
+  background-color: #bbb;
+  color: black;
+}
+
+.back {
+  background-color: rgba(255, 255, 255, 0.11);
+  color: white;
+  transform: rotateY(180deg);
+  border-radius: 50px;
+}
+
+
+
 
 
 
